--- a/main.css
+++ b/main.css
@@ -31,7 +31,9 @@ body {
     background: black;
     opacity: 0.7;
     color: white;
-    border: black solid;    
+    border: black solid;   
+    position: relative;
+    top: -100px; 
 }
 #logo {
     width: min(80px, 100%);
@@ -44,13 +46,60 @@ body {
 }
 .right-side {
     min-width: 60%;
+    background-color: rgba(235, 233, 233, 0.863);
+    
 }
 .sign-up {
-    --bttnwidth: 147px;
-
     display: flex;
+    align-items: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
-    width: calc(2*var(--bttnwidth));
-    justify-content:space-evenly;
-    overflow: auto;
+    width: 50%;
+    margin: 10px;
+}
+div.form-fields {
+    display: flex;
+    flex-direction: column;
+    justify-items: space-between;
+    width: 50%;
+    border-color: #596D48;
+}
+p.para-1 {
+    margin: 10px;
+}
+.formsign-up {
+    padding: 20px;
+    box-shadow: 0px 2px 0px 2px rgb(207, 206, 206);
+    background-color: white;
+    position: relative;
+    top: 100px;
+}
+.para-1 {
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+    padding: 30px;
+}
+.bttn-signup {
+    position: relative;
+}
+.signup-bttn {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    /* align-items: center; */
+    top: 100px;
+    padding: 20px;
+}
+p.signup-bttn {
+    padding: 1px;
+}
+.create-account {
+    padding: 10px;
+    width: 180px;
+    background-color: #596D48;
+    color: white;
+    border-radius: 5px;
+    box-shadow: rgb(207, 206, 206);
+    border-color: none;
 }
